<resources>
    <string name="app_name">Book Store App</string>

    <string name="action_insert_dummy_data">Insert dummy data</string>

    <string name="action_delete_all_entries">Delete all books</string>


    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview on the book</string>

    <!-- Label for Supplier information in the editor [CHAR LIMIT=30] -->
    <string name="supplier_info">Supplier Information</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <string name="hint_book_quantity">Quantity</string>

    <string name="hint_book_supplier_name">Store name</string>

    <string name="hint_store_phone">Store phone</string>
    <!-- text for the toast message to indicate the insertion done successfully -->
    <string name="catalog_dummy_data_inserted">Dummy book inserted successfully</string>
    <string name="sale">SALE</string>
    <string name="editor_insert_book_failed">Inserting book failed</string>
    <string name="editor_insert_Book_successful">Book inserted</string>
    <string name="hint_book_author_name">Author name</string>
    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_update_book_failed">Book update failed</string>
    <string name="editor_update_book_successful">Book update successfully</string>
    <string name="empty_view_add_books_pls">Add some books here</string>
    <string name="empty_view_empty_store">The store is empty...</string>
    <string name="empty_view_title_text">The store is empty...</string>
    <string name="empty_view_subtitle_text">Add some books here</string>
    <string name="list_of_books">List of books</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book ?.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sell_book_done">done</string>
    <string name="no_product_in_stock">No product in stock</string>

</resources>
