<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="197dp"
                    android:layout_weight="2"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_view_increase_quantity"
                        android:layout_width="36dp"
                        android:layout_height="34dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:src="@drawable/up_arrow_icon" />

                    <ImageView
                        android:id="@+id/image_view_decrease_quantity"
                        android:layout_width="36dp"
                        android:layout_height="34dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:src="@drawable/down_arrow_icon" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_book_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier_name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:layout_width="174dp"
                    android:hint="@string/hint_store_phone"
                    android:inputType="number" />

                <ImageView
                    android:id="@+id/button_call_supplier"
                    android:layout_width="63dp"
                    android:layout_height="56dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/call_ic" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>